--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,9 @@
     <string name="action_about">About</string>
     <string name="action_delete">Delete all data</string>
     <string name="action_reminder">Reminder time</string>
+    <string name="action_read">Read about this</string>
     <string name="title_activity_settings">SettingsActivity</string>
-    <string name="welcome_message">Welcome to CBT Patient Guide!</string>
+    <string name="welcome_message">Welcome to</string>
 
     <!-- Preference Titles -->
     <string name="messages_header">Messages</string>
@@ -156,8 +157,8 @@
     <string name="moveOn">OK. Let’s move on and test whether the way that you expressed what you felt was rational or irrational.</string>
     <string name="finish">Finish</string>
     <string name="summary">Summary</string>
-    <string name="completely_false">Completely false</string>
-    <string name="completely_true">Completely true</string>
+    <string name="completely_false">Completely\nfalse</string>
+    <string name="completely_true">Completely\ntrue</string>
     <string name="iNeedHelp">I need help!</string>
     <string name="iDontKnowINeedHelp">I don’t know. I need help!</string>
 
